<resources>
    <string name="app_name">Sudoku</string>
    <string name="score">points</string>
    <string name="action_suggest_field">Hint</string>
    <string name="action_back">Undo</string>
    <string name="action_reset">Restart</string>
    <string name="action_new_game">New game</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>

    <string name="resultNumber">is</string>
    <string name="helperNumber">is not</string>

    <string name="pref_game_experience">game experience</string>
    <string name="pref_easy_touch">easy touch</string>
    <string name="pref_easy_touch_summ">first touch activates the sudoku field, second touch opens the input dialog</string>
    <string name="pref_level">difficulty level</string>
    <string name="pref_level_summ">Attention: Changing the difficulty level starts a new game!</string>
    <string name="pref_auto_hint">automatic marks</string>
    <string name="pref_auto_hint_summ">each number on the sudoku grid automatically sets marks vertical, horizontal and group wise</string>

    <string name="pref_game_adviser">Game adviser</string>
    <string name="pref_hint">hints</string>
    <string name="pref_hint_summ">on pressing HINT, a sudoku field gets activated (as easy touch), marking a field, where a number or a mark can be set</string>
    <string name="pref_auto_insert1hint">insert hint 1</string>
    <string name="pref_auto_insert1hint_summ">if 8 marks are displayed, the sudoku field gets activated </string>
    <string name="pref_auto_insert2hint">insert hint 2</string>
    <string name="pref_auto_insert2hint_summ">if a specific number is missing only once in 9 marks vertical, horizontal or group wise, the sudoku field gets activated</string>
    <string name="pref_auto_adv1hint">hint advanced 1</string>
    <string name="pref_auto_adv1hint_summ">if a number is bound to the intersection of a row/column and a group, in the same row/column or group marks are not already set, a sudoku field with a possible new mark gets activated</string>
    <string name="pref_auto_adv2hint">hint advanced 2</string>
    <string name="pref_auto_adv2hint_summ">if in a group/row/column are n fields with the same n marks or less missing, marks can be set on the same numbers on the other fields, a sudoku field with a possible new mark gets activated</string>
    <string name="pref_auto_adv3hint">hint advanced 3</string>
    <string name="pref_auto_adv3hint_summ">if in a group/row/column are n missing marks distributed over n fields only, then marks can be set on the other numbers on the same n fields, a sudoku field with a possible new mark gets activated</string>
    <string name="pref_mark_error">mark error</string>
    <string name="pref_mark_error_summ">mark fields with a input not equal to the solution\n(duplicate inputs vertical, horizontal or group wise get marked by default)</string>

    <string name="pref_development">development options</string>
    <string name="pref_development_options">automatic play</string>
    <string name="pref_development_options_summ">let the device play for you</string>
    <string name="pref_auto_insert1">automatic insert 1</string>
    <string name="pref_auto_insert1_summ">if 8 marks are displayed, the missing number is inserted into the sudoku field</string>
    <string name="pref_auto_insert2">automatic insert 2</string>
    <string name="pref_auto_insert2_summ">if a number is missing only once in 9 marks vertical, horizontal or group wise, it gets inserted into the sudoku field</string>
    <string name="pref_auto_hint_adv1">automatic marks (adv 1)</string>
    <string name="pref_auto_hint_adv1_summ">if a number is bound to the intersection of a row/column and a group, in the same row/column or group marks are not already set, all possible new marks derived get marked</string>
    <string name="pref_auto_hint_adv2">automatic marks (adv 2)</string>
    <string name="pref_auto_hint_adv2_summ">if in a group/row/column are n fields with the same n marks or less missing, marks are set on the same numbers on the other fields</string>
    <string name="pref_auto_hint_adv3">automatic marks (adv 3)</string>
    <string name="pref_auto_hint_adv3_summ">if in a group/row/column are n missing marks distributed over n fields only, then marks are set on the other numbers on the same n fields</string>

    <string name="pref_font_size">settings font size</string>
    <string name="pref_font_size_main">font size sudoku grid</string>
    <string name="pref_font_size_main_default">20</string>
    <string name="pref_font_size_helper">font size marks</string>
    <string name="pref_font_size_helper_default">13</string>
    <string name="pref_font_size_input">font size selection</string>
    <string name="pref_font_size_input_default">16</string>

    <string name="delete">del</string>
</resources>
