<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.koudela.sudoku.MainActivity">
    <item
        android:id="@+id/action_suggest_field"
        android:orderInCategory="0"
        android:title="@string/action_suggest_field"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_back"
        android:orderInCategory="1"
        android:title="@string/action_back"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="2"
        android:title="@string/action_reset"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_new_game"
        android:orderInCategory="10"
        android:title="@string/action_new_game"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="10000"
        android:title="@string/action_info"
        app:showAsAction="never" />

</menu>
